--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,17 @@
+sudo: required
+
 language: node_js
 node_js:
   - "node"
+
+services:
+  - docker
+
+before_install:
+  - docker build -t nateinaction/wunderground-graphql .
+
+after_success:
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    docker push USER/REPO;
+    fi
