new jest test on cors module

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,11 @@ services:
   - docker
 
 before_install:
+  - echo "Building Container"
   - docker build -t nateinaction/wunderground-graphql .
 
 after_success:
+  - echo "Pushing to Docker Hub"
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
     docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
     docker push USER/REPO;
